; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_natsemi.c_miiport_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_natsemi.c_miiport_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, i32, i32)* @miiport_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @miiport_read(%struct.net_device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.net_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.net_device* %0, %struct.net_device** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 0, i32* %10, align 4
  %11 = load %struct.net_device*, %struct.net_device** %5, align 8
  %12 = call i32 @mii_send_bits(%struct.net_device* %11, i32 -1, i32 32)
  %13 = load i32, i32* %6, align 4
  %14 = shl i32 %13, 5
  %15 = or i32 6144, %14
  %16 = load i32, i32* %7, align 4
  %17 = or i32 %15, %16
  store i32 %17, i32* %8, align 4
  %18 = load %struct.net_device*, %struct.net_device** %5, align 8
  %19 = load i32, i32* %8, align 4
  %20 = call i32 @mii_send_bits(%struct.net_device* %18, i32 %19, i32 14)
  %21 = load %struct.net_device*, %struct.net_device** %5, align 8
  %22 = call i32 @mii_getbit(%struct.net_device* %21)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %43

25:                                               ; preds = %3
  store i32 0, i32* %9, align 4
  br label %26

26:                                               ; preds = %36, %25
  %27 = load i32, i32* %9, align 4
  %28 = icmp slt i32 %27, 16
  br i1 %28, label %29, label %39

29:                                               ; preds = %26
  %30 = load i32, i32* %10, align 4
  %31 = shl i32 %30, 1
  store i32 %31, i32* %10, align 4
  %32 = load %struct.net_device*, %struct.net_device** %5, align 8
  %33 = call i32 @mii_getbit(%struct.net_device* %32)
  %34 = load i32, i32* %10, align 4
  %35 = or i32 %34, %33
  store i32 %35, i32* %10, align 4
  br label %36

36:                                               ; preds = %29
  %37 = load i32, i32* %9, align 4
  %38 = add nsw i32 %37, 1
  store i32 %38, i32* %9, align 4
  br label %26

39:                                               ; preds = %26
  %40 = load %struct.net_device*, %struct.net_device** %5, align 8
  %41 = call i32 @mii_getbit(%struct.net_device* %40)
  %42 = load i32, i32* %10, align 4
  store i32 %42, i32* %4, align 4
  br label %43

43:                                               ; preds = %39, %24
  %44 = load i32, i32* %4, align 4
  ret i32 %44
}

declare dso_local i32 @mii_send_bits(%struct.net_device*, i32, i32) #1

declare dso_local i32 @mii_getbit(%struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
